<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    tools:context=".DetalleActivity"
    android:background="@color/colorAzulRey"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/txvTituloDetalle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:textSize="30dp"
        android:textStyle="bold"
        android:text="@string/txtDetalle"
        android:background="@drawable/style_bordes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txvIdDetalle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="280dp"
        android:text="@string/txtEstudianteId"
        android:background="@drawable/style_bordes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txvTituloDetalle" />

    <TextView
        android:id="@+id/txvNumeroDetalle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:hint="@string/txtNumero"
        app:layout_constraintStart_toEndOf="@+id/txvIdDetalle"
        app:layout_constraintTop_toBottomOf="@+id/txvTituloDetalle" />

    <TextView
        android:id="@+id/txvNombreDetalle"
        android:layout_width="300dp"
        android:layout_height="38dp"
        android:layout_marginTop="10dp"
        android:hint="@string/hintNombre"
        android:background="@drawable/style_bordes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txvIdDetalle" />

    <TextView
        android:id="@+id/txvApellidoPDetalle"
        android:layout_width="300dp"
        android:layout_height="38dp"
        android:layout_marginTop="10dp"
        android:hint="@string/hintApellidoPaterno"
        android:background="@drawable/style_bordes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txvNombreDetalle" />

    <TextView
        android:id="@+id/txvApellidoMDetalle"
        android:layout_width="300dp"
        android:layout_height="38dp"
        android:layout_marginTop="10dp"
        android:hint="@string/hintApellidoMaterno"
        android:background="@drawable/style_bordes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txvApellidoPDetalle" />

    <TextView
        android:id="@+id/txvGeneroDetalle"
        android:layout_width="300dp"
        android:layout_height="38dp"
        android:layout_marginTop="10dp"
        android:hint="@string/hintGenero"
        android:background="@drawable/style_bordes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txvApellidoMDetalle" />

    <TextView
        android:id="@+id/txvFechaNacimientoDetalle"
        android:layout_width="300dp"
        android:layout_height="38dp"
        android:layout_marginTop="10dp"
        android:hint="@string/txtFechaNacimiento"
        android:background="@drawable/style_bordes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txvGeneroDetalle" />

    <TextView
        android:id="@+id/txvNivelAcademicoDetalle"
        android:layout_width="300dp"
        android:layout_height="38dp"
        android:layout_marginTop="10dp"
        android:hint="@string/hintNivelAcademico"
        android:background="@drawable/style_bordes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txvFechaNacimientoDetalle" />

    <TextView
        android:id="@+id/txvUniversidadProcedenciaDetalle"
        android:layout_width="300dp"
        android:layout_height="38dp"
        android:layout_marginTop="10dp"
        android:hint="@string/hintUniversidadPro"
        android:background="@drawable/style_bordes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txvNivelAcademicoDetalle" />

    <TextView
        android:id="@+id/txvTelefonoDetalle"
        android:layout_width="300dp"
        android:layout_height="38dp"
        android:layout_marginTop="10dp"
        android:hint="@string/hintTelefono"
        android:background="@drawable/style_bordes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txvUniversidadProcedenciaDetalle" />

    <TextView
        android:id="@+id/txvCorreoDetalle"
        android:layout_width="300dp"
        android:layout_height="38dp"
        android:layout_marginTop="10dp"
        android:hint="@string/hintCorre"
        android:background="@drawable/style_bordes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txvTelefonoDetalle" />


</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>