<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAzulRey"
    tools:context=".AltaActivity">


    <TextView
        android:id="@+id/txvTituloAlta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/txtTituloAlta"
        android:textSize="30dp"
        android:textStyle="bold"
        android:background="@drawable/style_bordes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtNombreAlta"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/txtNombreAlta"
        android:inputType="textPersonName"
        android:background="@drawable/style_bordes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txvTituloAlta" />

    <EditText
        android:id="@+id/edtApellidoPAlta"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/txtApellidoPAlta"
        android:background="@drawable/style_bordes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtNombreAlta" />

    <EditText
        android:id="@+id/edtApellidoMAlta"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/txtApellidoMAlta"
        android:inputType="textPersonName"
        android:background="@drawable/style_bordes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtApellidoPAlta" />

    <Spinner
        android:id="@+id/spnGeneroAlta"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:entries="@array/generos"
        android:background="@drawable/style_bordes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtApellidoMAlta" />

    <EditText
        android:id="@+id/edtFechaNacimientoAlta"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/hintFechaNacimiento"
        android:background="@drawable/style_bordes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spnGeneroAlta" />

    <TextView
        android:id="@+id/txvTituloNivelAcademicoAlta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/txtTituloNivelAcademicoAlta"
        android:background="@drawable/style_bordes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtFechaNacimientoAlta" />

    <RadioGroup
        android:id="@+id/rdgNivelAcademico"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:background="@drawable/style_bordes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txvTituloNivelAcademicoAlta">

        <RadioButton
            android:id="@+id/rdgSecundaria"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtSecundaria" />

        <RadioButton
            android:id="@+id/rdgPrepa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtPrepa" />

        <RadioButton
            android:id="@+id/rdgUniversidad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtUniversidad" />
    </RadioGroup>

    <Spinner
        android:id="@+id/spnEscuelaProcedencia"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:entries="@array/escuelaProcedencia"
        android:background="@drawable/style_bordes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rdgNivelAcademico" />

    <EditText
        android:id="@+id/edtTelefonoAlta"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/txtTelefono"
        android:background="@drawable/style_bordes"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spnEscuelaProcedencia" />

    <EditText
        android:id="@+id/edtCorreoAlta"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/txtCorreo"
        android:background="@drawable/style_bordes"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtTelefonoAlta" />

    <Button
        android:id="@+id/btnRegistrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/txtRegistrar"
        android:background="@drawable/style_bordes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtCorreoAlta" />



</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>